2007-04-14 Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.h: Bug #419379: Modernize init_pygobject: use
	static inline functions instead of macros.

	* gobject/gobjectmodule.c (init_gobject):
	* gobject/pygobject-private.h:
	* gobject/pygobject.c (pygobject_data_free, pygobject_data_new),
	(pygobject_get_inst_data, pyg_toggle_notify),
	(pygobject_switch_to_toggle_ref),
	(pygobject_register_wrapper_full, pygobject_register_wrapper),
	(pygobject_new_full, pygobject_unwatch_closure),
	(pygobject_watch_closure, pygobject_dealloc, pygobject_repr),
	(pygobject_traverse, pygobject_clear, pygobject_weak_ref),
	(pygobject_setattro, pygobject_weak_ref_traverse),
	(pygobject_weak_ref_notify, pygobject_weak_ref_clear),
	(pygobject_weak_ref_dealloc, pygobject_weak_ref_new),
	(pygobject_weak_ref_unref, pygobject_weak_ref_call):
	* gobject/pygobject.h:
	* gobject/pygtype.c (gclosure_from_pyfunc):
	* tests/test_subtype.py:
	Bug #320428: Break PyGObject<->GObject reference cycle (patch
	v7.1; thanks John Ehresman for the help with this patch).

2007-03-17  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.c (pygobject_emit): Fix %ld vs int warning.
	(pygobject_chain_from_overridden): Idem.

2007-03-06  Richard Hult  <richard@imendio.com>

	* configure.ac: Fix the docs option so that it's possible to disable
	building the docs.

2007-03-03  Edward Hervey  <edward@fluendo.com>

	* gobject/pygobject.c: (set_property_from_pspec):
	Release the GIL when calling g_object_set_property, since setting a
	property might trigger some code that might come back in python land.
	Fixes #395048

2007-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac:  Turn the option --disable-docs into --enable-docs.
	* docs/Makefile.am:  Tread --enable-docs like --enable-gtk-doc in
	gtk+, i.e. do not ever build docs unless requested, but always
	install them if they are found already built.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>
