@@ -1,4 +1,8 @@
-2007-04-14 Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+2007-04-14  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/gobjectmodule.c (pyg_set_application_name) 
+	(pyg_set_prgname): Add wrappers for g_set_application_name and
+	g_set_prgname.  Patch by Havoc Pennington.  Fixes #415853.
 
 	* gobject/pygobject.h: Bug #419379: Modernize init_pygobject: use
 	static inline functions instead of macros.
